# tooty-lang

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  a.tooty  aaa.tooty  declare.txt  main.cpp
include/: VERSION.h  VERSION.hpp  exceptions.hpp
src/: lexer.cpp  lexer.hpp  main.cpp  tokens.cpp  tokens.hpp
